# final-autonomous-code-assistant-agent-KZhang2002

./: CMakeLists.txt  README.md  final_autonomous_code_assistant_agent_KZhang2002  makefile
Code/: CustomJobFactory.cpp  main.cpp
Code/JobSystem/: ChatJob.cpp  ChatJob.h  CompileJob.cpp  CompileJob.h  DefaultJobFactory.cpp  DefaultJobFactory.h  FlowScriptInterpreter.cpp  FlowScriptInterpreter.h  Job.h  JobSystem.cpp  JobSystem.h  RenderJob.cpp  openai.hpp
Code/TestCodeError/: test2.cpp
Code/TestCodeErrorOriginal/: test2.cpp
Code/lib/curl/: BUILD-HASHES.txt
Data/graphs/: llmAttempt.dot
Data/jobJSONs/: chatJob1.json  chatJob3.json  chatJobCode.json  chatJobFlow.json  renderJob.json
Data/logs/: log.txt  noSemiColonlog.txt
Data/output/: errorTest.json  errorTest2.json  errorTest2CodeFile.txt  errorTestCodeFile.txt  llmOutput.json  successTest.json
